etc/kubernetes/manifests/santander-phpinfo-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: katmandu-phpinfo-svc
spec:
  ports:
    - 
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: santander-phpinfo-dc # tambien se puede poner  {app: santander-phpinfo-service} Es el nombre del pod que lo usa
