etc/kubernetes/manifests/santander-phpinfo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: katmandu25-santander-phpinfo-route
spec:
  host: katmandu25-phpinfo
  port:
    targetPort: 8080
  to:
    kind: Service
    name: santander-phpinfo-svc # Nombre del servicio
